--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
     ],
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0,
-    "import/no-unresolved": 0
+    "import/no-unresolved": 0,
+    "no-param-reassign": 0,
+    "import/prefer-default-export": 0
   }
 }
