--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "evergreen-ui": "^7.1.4",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.9"
+    "react-redux": "^8.0.5",
+    "reselect": "^4.1.7",
+    "styled-components": "^5.3.9",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
