--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.1.7",
     "styled-components": "^5.3.9",
     "uuid": "^9.0.0"
