--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "evergreen-ui": "^7.1.4",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "next": "13.2.4",
@@ -26,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.7",
     "styled-components": "^5.3.9",
+    "use-react-screenshot": "^3.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
