--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "evergreen-ui": "^7.1.4",
+    "firebase": "^9.18.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "next": "13.2.4",
