--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-share": "^4.4.1",
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.7",
+    "store2": "^2.14.2",
     "styled-components": "^5.3.9",
     "tw-elements": "^1.0.0-beta1",
     "uuid": "^9.0.0"
